Updated index.html with new content

--- a/index.html
+++ b/index.html
@@ -1,36 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Abhishek Kumar | Personal Website</title>
+  <title>Abhishek Kumar | Home</title>
   <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
   <header>
-    <h1>Abhishek Kumar</h1>
-    <p>PhD Researcher, Software Engineering & AI, IIT Kharagpur</p>
+    <nav>
+      <a href="index.html">Home</a> |
+      <a href="research.html">Research & Publications</a> |
+      <a href="activities.html">Extracurricular Activities</a> |
+      <a href="blog.html">Blog</a> |
+      <a href="contact.html">Contact</a>
+    </nav>
   </header>
 
   <section>
-    <h2>About Me</h2>
-    <p>Welcome to my personal website. I am a 3rd-year PhD student working on Smart Software Bug Management using Issue-Commit Analysis.</p>
-  </section>
+    <h1>Welcome, I'm Abhishek Kumar!</h1>
+    <p>I am a 3rd-year PhD researcher in Software Engineering & AI at IIT Kharagpur, working on Smart Software Bug Management using Issue-Commit Analysis.</p>
 
-  <section>
-    <h2>Research Interests</h2>
+    <h2>Highlights:</h2>
     <ul>
-      <li>AI & Machine Learning</li>
-      <li>Software Engineering</li>
-      <li>Bug Management</li>
-      <li>Issue-Commit Analysis</li>
+      <li>Paper accepted at ICSE 2025</li>
+      <li>Research visit planned at Florida State University</li>
+      <li>Interested in sports, history, and sci-fi movies</li>
     </ul>
   </section>
 
   <footer>
-    <p>Contact me at: <a href="mailto:youremail@example.com">youremail@example.com</a></p>
+    <p>&copy; Abhishek Kumar, 2025</p>
   </footer>
 </body>
-
 </html>
